--- a/css/menu.css
+++ b/css/menu.css
@@ -5,22 +5,22 @@
 }
 
 .menu-suspend{
-  width: 45rem;
+  margin: auto;
   position: absolute;
-  height: 25rem;
-  border: 1px solid grey;
-  font-size: 2rem;
-  font-family: 'Fira sans';
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border-radius: 25px;
-  overflow: hidden;
+  z-index: -1;
   visibility: hidden;
+
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  width: 45rem;
+  height: 35rem;
+
+  border: none;
+
   background-color: #fff;
-  margin-left: 65vh;
-  margin-top: 25vh;
 }
 
 
@@ -29,21 +29,35 @@
   z-index: 5;
 }
 
-.div-header{
-  border: none;
-  width: 100%;
-  height: 35%;
-  background-color: rgb(14, 205, 138);
+h1{
+  margin: 0;
+  padding: 0;
+}
+
+form{
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.div-header{
+  border: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 35%;
+  align-items: center;
+  background-color: rgb(14, 205, 138);
   color: #fff;
 }
 .a-close{
   text-decoration: none;
   color: #fff;
-  padding-left: 50%;
   font-size: larger;
+  margin-right: 1rem;
 }
 /*Spans*/
 
@@ -54,9 +68,7 @@
   width: 25rem;
   font-size: 2.2rem;
   height: 3rem;
-  border-radius: 25px;
-  cursor: pointer;
-  margin-bottom: 8rem;
+  border-radius: 103px;
 }
 .btn-submit:hover{
   background-color: rgb(14, 195, 138);
@@ -69,6 +81,7 @@
   width: 5rem;
   border: none;
   border-bottom: .1rem solid grey;
+  text-align: center;
   
 }
 
@@ -76,10 +89,15 @@
   width: 25rem;
   border: none;
   border-bottom: .1rem solid grey;
+  text-align: center;
+  overflow: auto;
+  
 }
 
 .prec{
   width: 5rem;
   border: none;
   border-bottom: .1rem solid grey;
+  text-align: center;
+
 }
